--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id "kotlin-parcelize"
-    id "de.mannodermaus.android-junit5"
+    //id "de.mannodermaus.android-junit5"
     id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
@@ -36,16 +36,16 @@ android {
     }
 
     defaultConfig {
-        applicationId "in.delog"
         minSdk 24
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+        applicationId  "in.delog.ssb"
+        testApplicationId  "in.delog.ssb.test"
+        //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "in.delog.ssb.test.Instrumentation"
         // 2) Connect JUnit 5 to the runner
-        testInstrumentationRunnerArguments["runnerBuilder"] = "de.mannodermaus.junit5.AndroidJUnit5Builder"
+        //testInstrumentationRunnerArguments["runnerBuilder"] = "de.mannodermaus.junit5.AndroidJUnit5Builder"
 
         ndk.abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
 
@@ -82,7 +82,8 @@ android {
     }
     packagingOptions {
         resources {
-            excludes += ['META-INF/INDEX.LIST', 'META-INF/io.netty.versions.properties']
+            excludes += ['META-INF/INDEX.LIST', 'META-INF/*.md', 'META-INF/io.netty.versions.properties']
+            //pickFirsts += "**/*"
         }
     }
     buildToolsVersion '33.0.0'
@@ -109,9 +110,10 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     // Android Kotlin Project
-    implementation 'androidx.test.ext:junit:1.1.5'
+    //implementation 'androidx.test.ext:junit:1.1.5'
     implementation 'androidx.compose.material:material:1.4.0'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
+    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
     ext.kotlin_version = "1.7.20"
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
@@ -128,11 +130,8 @@ dependencies {
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
     implementation("androidx.room:room-paging:$room_version")
-    testImplementation("androidx.room:room-testing:$room_version")
-
 
     // material 3 and adaptive accompanist
-
     implementation "androidx.compose.material3:material3:1.0.1"
     implementation('com.google.accompanist:accompanist-insets:0.30.0')
     implementation('com.google.accompanist:accompanist-adaptive:0.30.0')
@@ -176,17 +175,32 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-webview:0.30.0'
     implementation 'com.github.jeziellago:compose-markdown:0.3.1'
 
-    // test libraries
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.2')
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.9.2')
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    testImplementation('androidx.test:runner:1.5.2')
-    androidTestImplementation('androidx.test:runner:1.5.2')
-    androidTestImplementation('org.junit.jupiter:junit-jupiter-api:5.9.2')
+
+    androidTestImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
     androidTestImplementation("de.mannodermaus.junit5:android-test-core:1.3.0")
     androidTestRuntimeOnly("de.mannodermaus.junit5:android-test-runner:1.3.0")
+//     testImplementation("androidx.room:room-testing:$room_version")
+
+    androidTestUtil 'androidx.test:orchestrator:1.4.0'
+
     // e2e integration tests
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
+
+    // https://mvnrepository.com/artifact/androidx.compose.ui/ui-test
+    androidTestImplementation 'androidx.compose.ui:ui-test:1.4.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.4.1'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test:core:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
+
+    //androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
+    //androidTestImplementation 'io.cucumber:cucumber-java8:4.8.1'
+    androidTestImplementation 'io.cucumber:cucumber-android:4.9.0'
+    androidTestImplementation 'com.adevinta.android:barista:4.2.0'
+    androidTestImplementation 'io.cucumber:cucumber-picocontainer:4.8.1'
+
 
 }
 
