--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,12 @@ android {
         testApplicationId  "in.delog.ssb.test"
         //testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner "in.delog.ssb.test.Instrumentation"
+        testInstrumentationRunnerArguments = [
+         cucumberUseAndroidJUnitRunner: getProperty("cucumberUseAndroidJUnitRunner"),
+         //uncomment this to clear app data before each test when running with orchestrator
+         clearPackageData: 'true'
+        ]
+
         // 2) Connect JUnit 5 to the runner
         //testInstrumentationRunnerArguments["runnerBuilder"] = "de.mannodermaus.junit5.AndroidJUnit5Builder"
 
@@ -86,6 +92,15 @@ android {
             //pickFirsts += "**/*"
         }
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+        animationsDisabled true
+//        uncomment this to run tests with orchestrator
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+    }
+
+
     buildToolsVersion '33.0.0'
 
     buildFeatures {
@@ -110,17 +125,15 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     // Android Kotlin Project
-    //implementation 'androidx.test.ext:junit:1.1.5'
-    implementation 'androidx.compose.material:material:1.4.0'
+    implementation 'androidx.compose.material:material:1.4.1'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
-    androidTestImplementation 'org.junit.jupiter:junit-jupiter'
     ext.kotlin_version = "1.7.20"
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     implementation "androidx.core:core-ktx:1.9.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
+    //def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose:compose-bom:2023.03.00'
     androidTestImplementation 'androidx.compose:compose-bom:2023.03.00'
     // Android Room
@@ -130,7 +143,6 @@ dependencies {
     kapt("androidx.room:room-compiler:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
     implementation("androidx.room:room-paging:$room_version")
-
     // material 3 and adaptive accompanist
     implementation "androidx.compose.material3:material3:1.0.1"
     implementation('com.google.accompanist:accompanist-insets:0.30.0')
@@ -175,32 +187,20 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-webview:0.30.0'
     implementation 'com.github.jeziellago:compose-markdown:0.3.1'
 
-
+    androidTestUtil 'androidx.test:orchestrator:1.4.0'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.4.1'
+    // junit5 for org.apache
     androidTestImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
     androidTestImplementation("de.mannodermaus.junit5:android-test-core:1.3.0")
     androidTestRuntimeOnly("de.mannodermaus.junit5:android-test-runner:1.3.0")
-//     testImplementation("androidx.room:room-testing:$room_version")
-
-    androidTestUtil 'androidx.test:orchestrator:1.4.0'
-
     // e2e integration tests
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation('androidx.test.espresso:espresso-web:3.5.1')
 
-    // https://mvnrepository.com/artifact/androidx.compose.ui/ui-test
-    androidTestImplementation 'androidx.compose.ui:ui-test:1.4.1'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.4.1'
-
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation 'androidx.test:core:1.4.0'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
-
-    //androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
-    //androidTestImplementation 'io.cucumber:cucumber-java8:4.8.1'
-    androidTestImplementation 'io.cucumber:cucumber-android:4.9.0'
-    androidTestImplementation 'com.adevinta.android:barista:4.2.0'
+    androidTestImplementation 'androidx.test:core:1.5.0'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'io.cucumber:cucumber-android:4.10.0'
     androidTestImplementation 'io.cucumber:cucumber-picocontainer:4.8.1'
-
 
 }
 
