--- a/app/build.gradle
+++ b/app/build.gradle
@@ -187,6 +187,8 @@ dependencies {
     implementation 'com.google.accompanist:accompanist-webview:0.30.0'
     implementation 'com.github.jeziellago:compose-markdown:0.3.1'
 
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
     androidTestUtil 'androidx.test:orchestrator:1.4.0'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.4.1'
     // junit5 for org.apache
