--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,14 +20,13 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id "kotlin-parcelize"
-    //id "de.mannodermaus.android-junit5"
     id 'org.jetbrains.kotlin.plugin.serialization'
 }
 
 
 android {
     namespace 'in.delog'
-    compileSdk 33
+    compileSdk 34
     ndkVersion "21.3.6528147"
     sourceSets {
         main {
@@ -105,6 +104,7 @@ android {
 
     buildFeatures {
         compose true
+        viewBinding true
     }
 
     composeOptions {
@@ -131,7 +131,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     implementation "androidx.core:core-ktx:1.9.0"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha03' //  TODO
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     //def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose:compose-bom:2023.03.00'
@@ -147,6 +147,7 @@ dependencies {
     implementation "androidx.compose.material3:material3:1.0.1"
     implementation('com.google.accompanist:accompanist-insets:0.30.0')
     implementation('com.google.accompanist:accompanist-adaptive:0.30.0')
+    implementation "com.google.accompanist:accompanist-permissions:0.30.0"
     implementation "androidx.compose.material:material-icons-extended"
     implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
     // Android Studio Preview support
@@ -190,6 +191,16 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
     implementation 'androidx.emoji2:emoji2-emojipicker:1.4.0-beta05'
+    // qr code printing
+    implementation "com.google.zxing:core:3.5.1"
+    implementation 'com.halilibo.compose-richtext:printing:0.16.0'
+
+    //implementation 'com.halilibo.compose-richtext:richtext-ui-material3:0.16.0'
+
+    implementation 'androidx.camera:camera-core:1.3.0-rc02'
+    implementation 'androidx.camera:camera-camera2:1.3.0-rc02'
+    implementation 'androidx.camera:camera-lifecycle:1.3.0-rc02'
+    implementation 'androidx.camera:camera-view:1.3.0-rc02'
 
 
     androidTestUtil 'androidx.test:orchestrator:1.4.0'
@@ -229,10 +240,10 @@ gradle.projectsEvaluated {
 
 [
         [input_arch: 'arm', output_arch: 'android-armv6', ndk_platform: 'android-19'],
-        [input_arch: 'armv7-a', output_arch: 'android-armv7-a', ndk_platform: 'android-19'],
-        [input_arch: 'armv8-a', output_arch: 'android-armv8-a', ndk_platform: 'android-21'],
-        [input_arch: 'x86', output_arch: 'android-i686', ndk_platform: 'android-19'],
-        [input_arch: 'x86_64', output_arch: 'android-westmere', ndk_platform: 'android-21'],
+//        [input_arch: 'armv7-a', output_arch: 'android-armv7-a', ndk_platform: 'android-19'],
+//        [input_arch: 'armv8-a', output_arch: 'android-armv8-a', ndk_platform: 'android-21'],
+//        [input_arch: 'x86', output_arch: 'android-i686', ndk_platform: 'android-19'],
+//        [input_arch: 'x86_64', output_arch: 'android-westmere', ndk_platform: 'android-21'],
 ].each { opts ->
 
     def taskname = "compileNative_${opts['output_arch']}"
