--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,9 +131,7 @@ dependencies {
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     implementation "androidx.core:core-ktx:1.9.0"
-    implementation 'androidx.appcompat:appcompat:1.7.0-alpha03' //  TODO
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    //def composeBom = platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose:compose-bom:2023.03.00'
     androidTestImplementation 'androidx.compose:compose-bom:2023.03.00'
     // Android Room
@@ -194,9 +192,6 @@ dependencies {
     // qr code printing
     implementation "com.google.zxing:core:3.5.1"
     implementation 'com.halilibo.compose-richtext:printing:0.16.0'
-
-    //implementation 'com.halilibo.compose-richtext:richtext-ui-material3:0.16.0'
-
     implementation 'androidx.camera:camera-core:1.3.0-rc02'
     implementation 'androidx.camera:camera-camera2:1.3.0-rc02'
     implementation 'androidx.camera:camera-lifecycle:1.3.0-rc02'
@@ -240,10 +235,10 @@ gradle.projectsEvaluated {
 
 [
         [input_arch: 'arm', output_arch: 'android-armv6', ndk_platform: 'android-19'],
-//        [input_arch: 'armv7-a', output_arch: 'android-armv7-a', ndk_platform: 'android-19'],
-//        [input_arch: 'armv8-a', output_arch: 'android-armv8-a', ndk_platform: 'android-21'],
-//        [input_arch: 'x86', output_arch: 'android-i686', ndk_platform: 'android-19'],
-//        [input_arch: 'x86_64', output_arch: 'android-westmere', ndk_platform: 'android-21'],
+        [input_arch: 'armv7-a', output_arch: 'android-armv7-a', ndk_platform: 'android-19'],
+        [input_arch: 'armv8-a', output_arch: 'android-armv8-a', ndk_platform: 'android-21'],
+        [input_arch: 'x86', output_arch: 'android-i686', ndk_platform: 'android-19'],
+        [input_arch: 'x86_64', output_arch: 'android-westmere', ndk_platform: 'android-21'],
 ].each { opts ->
 
     def taskname = "compileNative_${opts['output_arch']}"
