--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,28 @@ plugins {
 
 android {
     namespace 'in.delog'
-    compileSdk 34
+    compileSdk 33
     ndkVersion "21.3.6528147"
     sourceSets {
         main {
             jniLibs.srcDirs = ['src/main/jniLibs']
+        }
+    }
+    splits {
+        // Configures multiple APKs based on ABI. This helps keep the size
+        // down, since PT binaries can be large.
+        abi {
+            // Enables building multiple APKs per ABI.
+            //isEnable = true
+            // By default, all ABIs are included, so use reset() and include to specify
+            // that we only want APKs for x86 and x86_64, armeabi-v7a, and arm64-v8a.
+            // Resets the list of ABIs that Gradle should create APKs for to none.
+            reset()
+            // Specifies a list of ABIs that Gradle should create APKs for.
+            include("x86", "armeabi-v7a", "arm64-v8a", "x86_64")
+            // Specify whether you wish to also generate a universal APK that
+            // includes _all_ ABIs.
+            //isUniversalApk = true
         }
     }
 
@@ -89,6 +106,7 @@ android {
         jvmTarget = '1.8'
     }
     packagingOptions {
+        jniLibs.useLegacyPackaging = true
         resources {
             excludes += ['META-INF/INDEX.LIST', 'META-INF/*.md', 'META-INF/io.netty.versions.properties']
             //pickFirsts += "**/*"
@@ -110,13 +128,14 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.3.2"
+        kotlinCompilerExtensionVersion = "1.4.2"
     }
 }
 
 task nativeLibsToJar(type: Jar, description: 'create a jar archive of the native libs') {
-    destinationDir file("$buildDir/native-libs")
-    baseName 'native-libs'
+
+    //destinationDir file("$buildDir/native-libs")
+    //baseName 'native-libs'
     from fileTree(dir: 'libs', include: '**/*.so')
     into 'lib/'
 }
@@ -145,9 +164,9 @@ dependencies {
     implementation("androidx.room:room-paging:$room_version")
     // material 3 and adaptive accompanist
     implementation "androidx.compose.material3:material3:1.1.2"
-    implementation('com.google.accompanist:accompanist-insets:0.30.0')
-    implementation('com.google.accompanist:accompanist-adaptive:0.30.0')
-    implementation "com.google.accompanist:accompanist-permissions:0.30.0"
+    implementation('com.google.accompanist:accompanist-insets:0.30.1')
+    implementation('com.google.accompanist:accompanist-adaptive:0.30.1')
+    implementation "com.google.accompanist:accompanist-permissions:0.30.1"
     implementation "androidx.compose.material:material-icons-extended"
     implementation "androidx.compose.material3:material3-window-size-class:1.1.2"
     // Android Studio Preview support
@@ -169,6 +188,10 @@ dependencies {
     implementation("org.bouncycastle:bcprov-jdk15on:1.70")
     implementation('org.bouncycastle:bcpkix-jdk15on:1.70')
     implementation("org.miracl.milagro.amcl:milagro-crypto-java:0.4.0")
+    // kmp-tor
+    ext.vTor = "4.8.6-0"
+    ext.vKmpTor = "1.4.4"
+    implementation("io.matthewnelson.kotlin-components:kmp-tor:$vTor-$vKmpTor")
     // tools & networking
     implementation("org.syncope.identityconnectors:framework:0.4.3")
     compileOnly('io.vertx:vertx-core:4.4.1')
