--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ plugins {
 
 android {
     namespace 'in.delog'
-    compileSdk 33
+    compileSdk 34
     ndkVersion "21.3.6528147"
     sourceSets {
         main {
@@ -53,7 +53,7 @@ android {
 
     defaultConfig {
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         applicationId  "in.delog.ssb"
@@ -91,8 +91,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     // To let the libs be included in other projects
@@ -103,7 +103,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     packagingOptions {
         jniLibs.useLegacyPackaging = true
@@ -121,14 +121,14 @@ android {
     }
 
 
-    buildToolsVersion '33.0.0'
+    //buildToolsVersion '33.0.1'
 
     buildFeatures {
         compose true
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.4.2"
+        kotlinCompilerExtensionVersion = "1.4.3"
     }
 }
 
@@ -148,7 +148,7 @@ dependencies {
     // Android Kotlin Project
     implementation 'androidx.compose.material:material:1.4.1'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
-    ext.kotlin_version = "1.7.20"
+    ext.kotlin_version = "1.8.10"
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     implementation "androidx.core:core-ktx:1.9.0"
@@ -179,11 +179,11 @@ dependencies {
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
     // live data + view model
     implementation "androidx.compose.runtime:runtime-livedata"
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.6.1'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.6.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     // crypto
     implementation("org.bouncycastle:bcprov-jdk15on:1.70")
     implementation('org.bouncycastle:bcpkix-jdk15on:1.70')
