--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,15 +33,32 @@ android {
             jniLibs.srcDirs = ['src/main/jniLibs']
         }
     }
+    splits {
+        // Configures multiple APKs based on ABI. This helps keep the size
+        // down, since PT binaries can be large.
+        abi {
+            // Enables building multiple APKs per ABI.
+            //isEnable = true
+            // By default, all ABIs are included, so use reset() and include to specify
+            // that we only want APKs for x86 and x86_64, armeabi-v7a, and arm64-v8a.
+            // Resets the list of ABIs that Gradle should create APKs for to none.
+            reset()
+            // Specifies a list of ABIs that Gradle should create APKs for.
+            include("x86", "armeabi-v7a", "arm64-v8a", "x86_64")
+            // Specify whether you wish to also generate a universal APK that
+            // includes _all_ ABIs.
+            //isUniversalApk = true
+        }
+    }
 
     defaultConfig {
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
         applicationId  "in.delog.ssb"
         testApplicationId  "in.delog.ssb.test"
-        if (!getProperty("cucumberUseAndroidJUnitRunner")) {
+        if (getProperty("cucumberUseAndroidJUnitRunner")) {
             testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         } else {
             testInstrumentationRunner "in.delog.ssb.test.Instrumentation"
@@ -74,8 +91,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     // To let the libs be included in other projects
@@ -86,9 +103,10 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     packagingOptions {
+        jniLibs.useLegacyPackaging = true
         resources {
             excludes += ['META-INF/INDEX.LIST', 'META-INF/*.md', 'META-INF/io.netty.versions.properties']
             //pickFirsts += "**/*"
@@ -103,20 +121,21 @@ android {
     }
 
 
-    buildToolsVersion '33.0.0'
+    //buildToolsVersion '33.0.1'
 
     buildFeatures {
         compose true
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion = "1.3.2"
+        kotlinCompilerExtensionVersion = "1.4.3"
     }
 }
 
 task nativeLibsToJar(type: Jar, description: 'create a jar archive of the native libs') {
-    destinationDir file("$buildDir/native-libs")
-    baseName 'native-libs'
+
+    //destinationDir file("$buildDir/native-libs")
+    //baseName 'native-libs'
     from fileTree(dir: 'libs', include: '**/*.so')
     into 'lib/'
 }
@@ -129,7 +148,7 @@ dependencies {
     // Android Kotlin Project
     implementation 'androidx.compose.material:material:1.4.1'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
-    ext.kotlin_version = "1.7.20"
+    ext.kotlin_version = "1.8.10"
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     implementation "androidx.core:core-ktx:1.9.0"
@@ -145,9 +164,9 @@ dependencies {
     implementation("androidx.room:room-paging:$room_version")
     // material 3 and adaptive accompanist
     implementation "androidx.compose.material3:material3:1.1.2"
-    implementation('com.google.accompanist:accompanist-insets:0.30.0')
-    implementation('com.google.accompanist:accompanist-adaptive:0.30.0')
-    implementation "com.google.accompanist:accompanist-permissions:0.30.0"
+    implementation('com.google.accompanist:accompanist-insets:0.30.1')
+    implementation('com.google.accompanist:accompanist-adaptive:0.30.1')
+    implementation "com.google.accompanist:accompanist-permissions:0.30.1"
     implementation "androidx.compose.material:material-icons-extended"
     implementation "androidx.compose.material3:material3-window-size-class:1.1.2"
     // Android Studio Preview support
@@ -160,15 +179,19 @@ dependencies {
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
     // live data + view model
     implementation "androidx.compose.runtime:runtime-livedata"
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.6.1'
+    kapt 'androidx.lifecycle:lifecycle-compiler:2.6.2'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     // crypto
     implementation("org.bouncycastle:bcprov-jdk15on:1.70")
     implementation('org.bouncycastle:bcpkix-jdk15on:1.70')
     implementation("org.miracl.milagro.amcl:milagro-crypto-java:0.4.0")
+    // kmp-tor
+    ext.vTor = "4.8.6-0"
+    ext.vKmpTor = "1.4.4"
+    implementation("io.matthewnelson.kotlin-components:kmp-tor:$vTor-$vKmpTor")
     // tools & networking
     implementation("org.syncope.identityconnectors:framework:0.4.3")
     compileOnly('io.vertx:vertx-core:4.4.1')
