--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,7 @@ dependencies {
     // Android Kotlin Project
     implementation 'androidx.compose.material:material:1.4.1'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
+    implementation 'androidx.webkit:webkit:1.9.0'
     ext.kotlin_version = "1.8.10"
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
