--- a/app/build.gradle
+++ b/app/build.gradle
@@ -199,7 +199,8 @@ dependencies {
     implementation 'com.linkedin.urls:url-detector:0.1.17'
     implementation 'org.jsoup:jsoup:1.16.1'
     implementation("org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.6")
-    implementation 'io.coil-kt:coil-compose:2.3.0'
+    implementation 'io.coil-kt:coil-compose:2.5.0'
+    implementation 'io.coil-kt:coil-video:2.5.0'
     implementation "net.engawapg.lib:zoomable:1.5.2"
     implementation "androidx.media3:media3-exoplayer:1.2.0-rc01"
     implementation "androidx.media3:media3-ui:1.2.0-rc01"
