--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,7 @@ dependencies {
     implementation 'androidx.compose.material:material:1.4.1'
     implementation 'androidx.paging:paging-compose:1.0.0-alpha18'
     implementation 'androidx.webkit:webkit:1.9.0'
+    androidTestImplementation 'junit:junit:4.12'
     ext.kotlin_version = "1.8.10"
     implementation("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
@@ -199,7 +200,8 @@ dependencies {
     implementation 'com.linkedin.urls:url-detector:0.1.17'
     implementation 'org.jsoup:jsoup:1.16.1'
     implementation("org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.6")
-    implementation 'io.coil-kt:coil-compose:2.3.0'
+    implementation 'io.coil-kt:coil-compose:2.5.0'
+    implementation 'io.coil-kt:coil-video:2.5.0'
     implementation "net.engawapg.lib:zoomable:1.5.2"
     implementation "androidx.media3:media3-exoplayer:1.2.0-rc01"
     implementation "androidx.media3:media3-ui:1.2.0-rc01"
