--- a/settings.gradle
+++ b/settings.gradle
@@ -10,8 +10,10 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://repo1.maven.org/maven2'  }
         maven { url 'https://jitpack.io' }
     }
 }
+
 rootProject.name = "ssb"
 include ':app'
